# RhythmCat2

./: AUTHORS  COPYING_CN  COPYING_JP  ChangeLog  Makefile.am  Makefile.in  README  RhythmCat2-1.9.2.spec  RhythmCat2-1.9.3.spec  RhythmCat2-1.9.4.spec  TODO  aclocal.m4  clear  config.h.in  configure  configure.ac  configure.in  cscope.files  cscope.in.out  cscope.out  cscope.po.out  description-pak  index.html  params.json  rclib-player.c  rhythmcat-2.0.pc.in
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
data/: Makefile.am  Makefile.in  RhythmCat2.1  RhythmCat2.desktop
data/icons/: Makefile.am  Makefile.in  RhythmCat2_Icon.xpm
data/images/: Makefile.am  Makefile.in  RhythmCat2.XCF  RhythmCat2_NoCover.XCF
data/themes/: Makefile.am  Makefile.in
data/themes/AeroBlue/: Makefile.am  Makefile.in  gtk3.css  gtkrc
data/themes/Monochrome/: Makefile.am  Makefile.in  gtk3.css  gtkrc
debian/: changelog  control  copyright  gir1.2-librhythmcat2.install  gir1.2-rhythmcat2.install  librhythmcat2-dev.install  librhythmcat2-doc.install  librhythmcat2.install  menu  postinst  postrm  rhythmcat2-dev.install  rhythmcat2-doc.install  rhythmcat2-plugins-base.install  rhythmcat2-plugins-extra.install  rhythmcat2-plugins-python3-loader.install  rhythmcat2.install  rules
docs/: Makefile  Makefile.in
docs/reference/: Makefile  Makefile.in
docs/reference/lib/: LibRhythmCat-decl-list.txt  LibRhythmCat-decl.txt  LibRhythmCat-docs.sgml  LibRhythmCat-sections.txt  LibRhythmCat-undocumented.txt  LibRhythmCat.hierarchy  LibRhythmCat.signals  LibRhythmCat.types  Makefile  Makefile.am  Makefile.in
docs/reference/lib/.libs/: LibRhythmCat-scan  lt-LibRhythmCat-scan
docs/reference/lib/html/: LibRhythmCat-Cue-Parser.html  LibRhythmCat-Main-Module.html  LibRhythmCat-Main-module.html  LibRhythmCat-RCLibAlbum.html  LibRhythmCat-RCLibDBus.html  LibRhythmCat-RCLibPlugin.html  LibRhythmCat-Refable-String.html  LibRhythmCat-Settings.html  LibRhythmCat-Tag-Processor.html  LibRhythmCat-Utilities.html  LibRhythmCat.devhelp2  RCLibAlbum.html  RCLibCore.html  RCLibDb.html  RCLibDbLibraryQueryResult.html  RCLibLyric.html  RCLibPlayer.html  RCLibPlugin.html  annotation-glossary.html  api-index-full.html  ch01.html  deprecated-api-index.html  index.html  index.sgml  object-tree.html
docs/reference/lib/xml/: LibRhythmCat-doc.bottom  annotation-glossary.xml  api-index-full.xml  object_index.sgml  rclib-album.xml  rclib-common.xml  rclib-core.xml  rclib-cue.xml  rclib-db.xml  rclib-dbus.xml  rclib-lyric.xml  rclib-player.xml  rclib-plugin.xml  rclib-settings.xml  rclib-tag.xml  rclib-util.xml  rclib.xml  tree_index.sgml
docs/reference/ui/: Makefile.am  Makefile.in  RhythmCat-docs.sgml  RhythmCat-sections.txt  RhythmCat.types  version.xml.in
docs/reference/ui/html/: RCMainApplication.html  RCUiCellRendererRating.html  RCUiLibraryPropStore.html  RCUiLibraryPropView.html  RCUiLibraryWindow.html  RCUiMainWindow.html  RCUiPlayer.html  RCUiPlaylistStore.html  RCUiPlaylistView.html  RCUiScrollableLabel.html  RCUiSpectrumWidget.html  RhythmCat-Audio-Effect-UI.html  RhythmCat-Dialogs.html  RhythmCat-List-Views.html  RhythmCat-Menus.html  RhythmCat-Plug-in-Configuration-UI.html  RhythmCat-Settings-UI.html  RhythmCat-Styles.html  RhythmCat-rc-main.html  RhythmCat-rc-mpris2.html  RhythmCat-rc-ui-dialog.html  RhythmCat-rc-ui-effect.html  RhythmCat-rc-ui-listview.html  RhythmCat-rc-ui-menu.html  RhythmCat-rc-ui-plugin.html  RhythmCat-rc-ui-settings.html  RhythmCat-rc-ui-style.html  RhythmCat.devhelp2  annotation-glossary.html  api-index-full.html  ch01.html  deprecated-api-index.html  index.html  index.sgml  object-tree.html
lib/: Makefile.am  Makefile.in  librhythmcat-2.0.pc.in  rclib-album.c  rclib-album.h  rclib-common-priv.h  rclib-common.h  rclib-core.c  rclib-core.h  rclib-cue.c  rclib-cue.h  rclib-db-library.c  rclib-db-playlist.c  rclib-db-priv.h  rclib-db.c  rclib-db.h  rclib-dbus.c  rclib-dbus.h  rclib-lyric.c  rclib-lyric.h  rclib-marshal.c  rclib-marshal.h  rclib-marshal.list  rclib-player.c  rclib-player.h  rclib-plugin.c  rclib-plugin.h  rclib-settings.c  rclib-settings.h  rclib-string.c  rclib-string.h  rclib-tag.c  rclib-tag.h  rclib-util.c  rclib-util.h  rclib.c  rclib.h
m4/: ChangeLog
plugins/: Makefile.am  Makefile.in
plugins/base/: Makefile.am  Makefile.in  desklrc.c  lyricshow.c  lyricshow.c~  mediakey.c  mpris2.c  notify.c
plugins/devel/: Makefile.am  Makefile.in  gtktest.py  helloworld.c  helloworld.py  karamixer.c  lyricshow.c  python3.c
plugins/extra/: Makefile.am  Makefile.in  echoeffect.c  karaeffect.c  lrccrawler-common.c  lrccrawler-common.h  lrccrawler-lrc123.c  lrccrawler.c
plugins/restricted/: Makefile.am  Makefile.in  lrccrawler-ttplayer.c
po/: .goutputstream-3U6CDW  ChangeLog  LINGUAS  POTFILES.in  RhythmCat.pot  en_US.po  ja_JP.gmo  ja_JP.po  zh_CN.gmo  zh_CN.po  zh_HK.po  zh_TW.gmo  zh_TW.po
rpm/: RhythmCat2.spec
test/: db-converter  db-converter-build.sh  db-converter.c
ui/: Makefile.am  Makefile.in  main.c  mpris2.c  mpris2.h  rc-common.h  rc-main.c  rc-main.h  rc-marshal.c  rc-marshal.h  rc-marshal.list  rc-mpris2.c  rc-mpris2.h  rc-ui-cell-renderer-rating.c  rc-ui-cell-renderer-rating.h  rc-ui-css.h  rc-ui-dialog.c  rc-ui-dialog.h  rc-ui-effect.c  rc-ui-effect.h  rc-ui-img-icon.xpm  rc-ui-img-nocov.xpm  rc-ui-library-model.c  rc-ui-library-model.h  rc-ui-library-view.c  rc-ui-library-view.h  rc-ui-library-window.c  rc-ui-library-window.h  rc-ui-listmodel.c  rc-ui-listmodel.h  rc-ui-listview.c  rc-ui-listview.h  rc-ui-menu.c  rc-ui-menu.h  rc-ui-no-star-inline.h  rc-ui-player.c  rc-ui-player.h  rc-ui-plugin.c  rc-ui-plugin.h  rc-ui-resources.c  (+33 more)
ui/resources/: Makefile.am  Makefile.in
ui/resources/themes/: Makefile.am  Makefile.in
ui/resources/themes/Monochrome/: Makefile.am  Makefile.in  monochrome.css
